@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1990 The Regents of the University of California.
+ * Copyright (c) 1990, 2006 The Regents of the University of California.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms are permitted
@@ -21,14 +21,15 @@ FUNCTION
 
 INDEX
 	fflush
-INDEX
-	_fflush_r
 
 ANSI_SYNOPSIS
 	#include <stdio.h>
 	int fflush(FILE *<[fp]>);
 
-	int _fflush_r(struct _reent *<[reent]>, FILE *<[fp]>);
+TRAD_SYNOPSIS
+	#include <stdio.h>
+	int fflush(<[fp]>)
+	FILE *<[fp]>;
 
 DESCRIPTION
 The <<stdio>> output functions can buffer output before delivering it
@@ -40,46 +41,41 @@ or stream identified by <[fp]>) to the host system.
 If <[fp]> is <<NULL>>, <<fflush>> delivers pending output from all
 open files.
 
-Additionally, if <[fp]> is a seekable input stream visiting a file
-descriptor, set the position of the file descriptor to match next
-unread byte, useful for obeying POSIX semantics when ending a process
-without consuming all input from the stream.
-
-The alternate function <<_fflush_r>> is a reentrant version, where the
-extra argument <[reent]> is a pointer to a reentrancy structure, and
-<[fp]> must not be NULL.
-
 RETURNS
 <<fflush>> returns <<0>> unless it encounters a write error; in that
 situation, it returns <<EOF>>.
 
 PORTABILITY
-ANSI C requires <<fflush>>.  The behavior on input streams is only
-specified by POSIX, and not all implementations follow POSIX rules.
+ANSI C requires <<fflush>>.
 
 No supporting OS subroutines are required.
 */
 
 #include <_ansi.h>
 #include <stdio.h>
-#include <errno.h>
 #include "local.h"
 
 /* Flush a single file, or (if fp is NULL) all files.  */
 
-/* Core function which does not lock file pointer.  This gets called
-   directly from __srefill. */
 int
-_DEFUN(__sflush_r, (ptr, fp),
-       struct _reent *ptr _AND
+_DEFUN(fflush, (fp),
        register FILE * fp)
 {
   register unsigned char *p;
   register int n, t;
 
+  if (fp == NULL)
+    return _fwalk (_GLOBAL_REENT, fflush);
+
+  CHECK_INIT (_REENT);
+
+  _flockfile (fp);
+
   t = fp->_flags;
   if ((t & __SWR) == 0)
     {
+      _fpos_t _EXFUN((*seekfn), (_PTR, _fpos_t, int));
+
       /* For a read stream, an fflush causes the next seek to be
          unoptimized (i.e. forces a system-level seek).  This conforms
          to the POSIX and SUSv3 standards.  */
@@ -92,45 +88,22 @@ _DEFUN(__sflush_r, (ptr, fp),
          this seek to be deferred until necessary, but we choose to do it here
          to make the change simpler, more contained, and less likely
          to miss a code scenario.  */
-      if ((fp->_r > 0 || fp->_ur > 0) && fp->_seek != NULL)
-	{
-	  int tmp_errno;
-#ifdef __LARGE64_FILES
-	  _fpos64_t curoff;
-#else
-	  _fpos_t curoff;
-#endif
+      if ((fp->_r > 0 || fp->_ur > 0) && (seekfn = fp->_seek) != NULL)
+        {
+          _fpos_t curoff;
 
-	  /* Save last errno and set errno to 0, so we can check if a device
-	     returns with a valid position -1.  We restore the last errno if
-	     no other error condition has been encountered. */
-	  tmp_errno = ptr->_errno;
-	  ptr->_errno = 0;
-	  /* Get the physical position we are at in the file.  */
-	  if (fp->_flags & __SOFF)
-	    curoff = fp->_offset;
-	  else
-	    {
-	      /* We don't know current physical offset, so ask for it.
-		 Only ESPIPE and EINVAL are ignorable.  */
-#ifdef __LARGE64_FILES
-	      if (fp->_flags & __SL64)
-		curoff = fp->_seek64 (ptr, fp->_cookie, 0, SEEK_CUR);
-	      else
-#endif
-		curoff = fp->_seek (ptr, fp->_cookie, 0, SEEK_CUR);
-	      if (curoff == -1L && ptr->_errno != 0)
-		{
-		  int result = EOF;
-		  if (ptr->_errno == ESPIPE || ptr->_errno == EINVAL)
-		    {
-		      result = 0;
-		      ptr->_errno = tmp_errno;
-		    }
-		  else
-		    fp->_flags |= __SERR;
-		  return result;
-		}
+          /* Get the physical position we are at in the file.  */
+          if (fp->_flags & __SOFF)
+            curoff = fp->_offset;
+          else
+            {
+              /* We don't know current physical offset, so ask for it.  */
+              curoff = (*seekfn) (fp->_cookie, (_fpos_t) 0, SEEK_CUR);
+              if (curoff == -1L)
+                {
+                  _funlockfile (fp);
+                  return 0;
+                }
             }
           if (fp->_flags & __SRD)
             {
@@ -140,38 +113,24 @@ _DEFUN(__sflush_r, (ptr, fp),
               if (HASUB (fp))
                 curoff -= fp->_ur;
             }
-	  /* Now physically seek to after byte last read.  */
-#ifdef __LARGE64_FILES
-	  if (fp->_flags & __SL64)
-	    curoff = fp->_seek64 (ptr, fp->_cookie, curoff, SEEK_SET);
-	  else
-#endif
-	    curoff = fp->_seek (ptr, fp->_cookie, curoff, SEEK_SET);
-	  if (curoff != -1 || ptr->_errno == 0
-	      || ptr->_errno == ESPIPE || ptr->_errno == EINVAL)
-	    {
-	      /* Seek successful or ignorable error condition.
-		 We can clear read buffer now.  */
-	      fp->_flags &= ~__SNPT;
-	      fp->_r = 0;
-	      fp->_p = fp->_bf._base;
-	      if ((fp->_flags & __SOFF) && (curoff != -1 || ptr->_errno == 0))
-		fp->_offset = curoff;
-	      ptr->_errno = tmp_errno;
-	      if (HASUB (fp))
-		FREEUB (ptr, fp);
-	    }
-	  else
-	    {
-	      fp->_flags |= __SERR;
-	      return EOF;
-	    }
-	}
+          /* Now physically seek to after byte last read.  */
+          if ((*seekfn)(fp->_cookie, curoff, SEEK_SET) != -1)
+            {
+              /* Seek successful.  We can clear read buffer now.  */
+              fp->_flags &= ~__SNPT;
+              fp->_r = 0;
+              fp->_p = fp->_bf._base;
+              if (fp->_flags & __SOFF)
+                fp->_offset = curoff;
+            }
+        } 
+      _funlockfile (fp);
       return 0;
     }
   if ((p = fp->_bf._base) == NULL)
     {
       /* Nothing to flush.  */
+      _funlockfile (fp);
       return 0;
     }
   n = fp->_p - p;		/* write this much */
@@ -186,62 +145,16 @@ _DEFUN(__sflush_r, (ptr, fp),
 
   while (n > 0)
     {
-      t = fp->_write (ptr, fp->_cookie, (char *) p, n);
+      t = (*fp->_write) (fp->_cookie, (char *) p, n);
       if (t <= 0)
 	{
           fp->_flags |= __SERR;
+          _funlockfile (fp);
           return EOF;
 	}
       p += t;
       n -= t;
     }
+  _funlockfile (fp);
   return 0;
 }
-
-int
-_DEFUN(_fflush_r, (ptr, fp),
-       struct _reent *ptr _AND
-       register FILE * fp)
-{
-  int ret;
-
-#ifdef _REENT_SMALL
-  /* For REENT_SMALL platforms, it is possible we are being
-     called for the first time on a std stream.  This std
-     stream can belong to a reentrant struct that is not
-     _REENT.  If CHECK_INIT gets called below based on _REENT,
-     we will end up changing said file pointers to the equivalent
-     std stream off of _REENT.  This causes unexpected behavior if
-     there is any data to flush on the _REENT std stream.  There
-     are two alternatives to fix this:  1) make a reentrant fflush
-     or 2) simply recognize that this file has nothing to flush
-     and return immediately before performing a CHECK_INIT.  Choice
-     2 is implemented here due to its simplicity.  */
-  if (fp->_bf._base == NULL)
-    return 0;
-#endif /* _REENT_SMALL  */
-
-  CHECK_INIT (ptr, fp);
-
-  if (!fp->_flags)
-    return 0;
-
-  _newlib_flockfile_start (fp);
-  ret = __sflush_r (ptr, fp);
-  _newlib_flockfile_end (fp);
-  return ret;
-}
-
-#ifndef _REENT_ONLY
-
-int
-_DEFUN(fflush, (fp),
-       register FILE * fp)
-{
-  if (fp == NULL)
-    return _fwalk_reent (_GLOBAL_REENT, _fflush_r);
-
-  return _fflush_r (_REENT, fp);
-}
-
-#endif /* _REENT_ONLY */
